--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="title_activity_scholarship_page2">ScholarshipPage2</string>
     <string name="action_settings">Settings</string>
     <string name="title_PHINMAScholarship">PHINMA Scholarship \n(formerly Presidential \nScholarship)</string>
-    <string name="sch_descriptionScholarshipsList">Check our complete list of scholarships below:</string>
+    <string name="sch_descriptionScholarshipsList">Check our complete list of scholarships:</string>
     <string name="sch_nextPage">nextpage</string>
 
     <string-array name="scholarship_titles">
