Refactor package names and update project configurations
Refactored the project by renaming the base package from `com.example.ite393exam` to `com.example.studenthandbookapp`. This affects the package declaration in all Java and Kotlin files, as well as the application ID, namespace, and root project name in build configuration files.
Additionally, it updates:
- the app label,
- the string resources,
- project dependencies
- the gradle wrapper.
- removed the bold text from the description of the Bachelor of Science in Accountancy program in the management activity.
- Add Registration class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">ITE393Exam</string>
+    <string name="app_name">studenthandbookapp</string>
 
     <string name="leeian_name"><u>LEEIAN MATTHEW P. LACORTE</u></string>
 
