--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,5 +241,12 @@
     </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="event">
+        <item>Show: All Events</item>
+        <item>Hackathons</item>
+        <item>Workshops</item>
+        <item>Seminars</item>
+        <item>Competitions</item>
+    </string-array>
 
 </resources>
